main html added

--- a/page/include/_header.html
+++ b/page/include/_header.html
@@ -1,3 +1,11 @@
-<header class="header" style="background-color: blue;">
-    header
+<header class="header container" style="background-color: #000000;">
+    <h1>MetaBlog</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Track</a></li>
+                <li><a href="#">Category</a></li>
+            </ul>
+        </nav>    
 </header>
