--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -4,7 +4,7 @@
     Order:    Header > table > list > input > select box, radiobutton, checkbox > Footer 
 -------------------------------------------------------------------*/
 
-.container {max-width: 1700px; margin: 0 auto;width: 95%;height: 100%;}
+.container {max-width: 1216px; margin: 0 auto;width: 95%;height: 100%;}
 
 /* use responsive */
 .mo_item {display: block;}
@@ -18,7 +18,17 @@
 img {width: 100%;height: 100%;transition: ease-in-out 0.3s;}
 
 /* header start */
-
+.wrapper_banner {
+    height: 664px;
+}
+.wrapper_banner img {
+    height: 600px;
+}
+.box_profile{
+    width: 598px;
+    height: 304px;
+    padding: 40px;
+}
 /* header end */
 
 
